--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./style.css" />
     <title>Work Day Scheduler</title>
   </head>
 
@@ -33,9 +33,9 @@
 
       <div class="input-group">
         <div class="input-group-prepend">
-          <span class="input-group-text hour">9:00am</span>
+          <span class="input-group-text hour"> 9:00 am</span>
         </div>
-        <input type="text" class="form-control With textarea" class="9"></input type>
+        <input type="text" class="form-control With textarea" id="9:00"></input type>
         <button type="button" class="saveBtn"><i class="fas fa-save"></i></i></button> 
 
         <!-- </div>
@@ -47,9 +47,9 @@
     
       <div class="input-group">
         <div class="input-group-prepend">
-          <span class="input-group-text hour">10:00am</span>
+          <span class="input-group-text hour"> 10:00 am</span>
         </div>
-        <input type="text" class="form-control with textarea" 10:00></input type>
+        <input type="text" class="form-control with textarea" id="10:00"></input type>
         <button type="button" class="saveBtn"><i class="fas fa-save"></i></i></button> 
 
         <!-- <div class="invalid-schudel">
@@ -62,7 +62,7 @@
         <div class="input-group-prepend">
           <span class="input-group-text hour">11:00am</span>
         </div>
-        <input type="text" class="form-control" 11:00></input type>
+        <input type="text" class="form-control with textarea" id="11:00"></input type>
         <button type="button" class="saveBtn"><i class="fas fa-save"></i></i></button> 
 
         <!-- <div class="invalid-schudel">
@@ -72,9 +72,9 @@
 
       <div class="input-group">
         <div class="input-group-prepend">
-          <span class="input-group-text hour">12:00am</span>
+          <span class="input-group-text hour"> 12:00 am</span>
         </div>
-        <input type="text" class="form-control"12:00></input type>
+        <input type="text" class="form-control with textarea" id="12:00"></input type>
         <button type="button" class="saveBtn"><i class="fas fa-save"></i></i></button> 
 
         <!-- <div class="invalid-feedback">
@@ -84,9 +84,9 @@
       
       <div class="input-group">
         <div class="input-group-prepend">
-          <span class="input-group-text hour">1:00pm</span>
+          <span class="input-group-text hour"> 1:00 pm</span>
         </div>
-        <input type="text" class="form-control"1:00></input type>
+        <input type="text" class="form-control with textarea" id="1:00"></input type>
         <button type="button" class="saveBtn"><i class="fas fa-save"></i></i></button> 
 
         <!-- <div class="invalid-feedback">
@@ -96,9 +96,9 @@
 
       <div class="input-group">
         <div class="input-group-prepend">
-          <span class="input-group-text hour">2:00pm</span>
+          <span class="input-group-text hour"> 2:00pm </span>
         </div>
-        <input type="text" class="form-control"2:00></input type>
+        <input type="text" class="form-control with textarea" id="2:00"></input type>
         <button type="button" class="saveBtn"><i class="fas fa-save"></i></i></button> 
 
         <!-- <div class="invalid-feedback">
@@ -110,7 +110,7 @@
         <div class="input-group-prepend">
           <span class="input-group-text hour">3:00pm</span>
         </div>
-        <input type="text" class="form-control rounded-right"3:00></input type>
+        <input type="text" class="form-control with textarea"id="3:00"></input type>
         <button type="button" class="saveBtn"><i class="fas fa-save"></i></i></button> 
 
         <!-- <div class="invalid-feedback">
@@ -120,9 +120,9 @@
 
       <div class="input-group">
         <div class="input-group-prepend">
-          <span class="input-group-text hour">4:00pm</span>
+          <span class="input-group-text hour"> 4:00 pm</span>
         </div>
-        <input type="text" class="form-control rounded-right" 4:00></input type>
+        <input type="text" class="form-control with textarea" id="4:00"></input type>
         <button type="button" class="saveBtn"><i class="fas fa-save"></i></i></button> 
 
         <!-- <div class="invalid-feedback">
@@ -132,9 +132,9 @@
 
       <div class="input-group">
         <div class="input-group-prepend">
-          <span class="input-group-text hour">5:00pm</span>
+          <span class="input-group-text hour"> 5:00pm </span>
         </div>
-        <input type="text" class="form-control"5:00></input type>
+        <input type="text" class="form-control with textarea" id="5:00"></input type>
         <button type="button" class="saveBtn"><i class="fas fa-save"></i></i></button> 
 
         <!-- <div class="invalid-feedback">
@@ -151,5 +151,6 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+    <script src="./script.js"></script>
   </body>
 </html>
